desc certa para o swagger
